# trading-engine

./: .gitignore  ARCH.md  CMakeLists.txt  LAST_TIME.md  README.md
include/: Instrument.h
notes/: LAST_TIME.md  MODULES.md  RESOURCES.md
src/: main.cpp
trading-engine/: CMakeLists.txt
trading-engine/include/: DataParser.hpp  Instrument.h  KrakenParser.hpp  PricingSystem.h  Types.h  World.h  World.hpp  World.ixx
trading-engine/src/: World.cpp
trading-engine/tests/: CMakeLists.txt  World_tests.cpp
trading-engine/tests/data/kraken/OHLCVT_Q1_2023/: BTTUSD_5.csv  BTTUSD_60.csv  BTTUSD_720.csv  ETHCAD_1.csv  ETHDAI_720.csv  ETHJPY_1.csv  ETHJPY_720.csv  ETHUSDC_1.csv  ETHUSDT_1.csv  ZECUSD_1.csv  ZECUSD_1440.csv  ZECUSD_15.csv
